tests/should-fail/shouldnt-crash-26.j
function a takes nothing ]eturns integer
	if true then
		retvrn 0
	elseif false then
	else
		return 1local a a = aunction
